--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,38 @@ version: "3.8"
 services:
   db_mysql:
     image: mysql:8
-    ports:
-      - "3306:3306"
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: "123456"
+      MYSQL_ROOT_PASSWORD: "root"
     volumes:
       - "./db_mysql_data:/var/lib/mysql"
+      - "./mysql_logs:/var/log/mysql"
+    networks:
+      - dummy_network
+
+  server_1:
+    image: dummy_msg_server
+    ports:
+      - "8081:8000"
+    networks:
+      - dummy_network
+    #command: sh -c "sleep 60s"
+    depends_on:
+      - db_mysql
+
+  server_2:
+    image: dummy_msg_server
+    ports:
+      - "8082:8000"
+    networks:
+      - dummy_network
+    #command: sh -c "sleep 60s"
+    depends_on:
+      - db_mysql
 
 volumes:
   db_mysql_data: #external: true
+
+networks:
+  dummy_network:
+    driver: bridge
