--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,9 @@ services:
       retries: 5
 
   server_1:
-    image: dummy_msg_server
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8081:8000"
     depends_on:
@@ -26,7 +28,9 @@ services:
         condition: service_healthy
 
   server_2:
-    image: dummy_msg_server
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8082:8000"
     depends_on:
@@ -35,7 +39,3 @@ services:
 
 volumes:
   db_mysql_data: #external: true
-
-networks:
-  dummy_network:
-    driver: bridge
